# gnap

./: .gitignore  Cargo.toml  GNAP.postman_collection.json  GNAP.postman_environment.json  LICENCE  README.md  docker-compose.yml  log4rs.yml
.data/redis/: dump.rdb
as/: Cargo.toml
as/src/: main.rs
as/src/grant/: request.rs
as/src/handlers/: db.rs  mod.rs  transaction.rs  well_known.rs
as/src/routes/: db.rs  mod.rs  transaction.rs  well_known.rs
as/src/utils/: mod.rs
dao/: Cargo.toml
dao/src/: cache.rs  constants.rs  db.rs  lib.rs  service.rs
dao/src/db/: mod.rs
errors/: Cargo.toml
errors/src/: lib.rs
gnap_as/: Cargo.toml
gnap_as/public/: index.html
gnap_as/src/: lib.rs  main.rs
gnap_as/src/grant/: request.rs
gnap_as/src/handlers/: db.rs  transaction.rs  well_known.rs
gnap_as/src/routes/: db.rs  transaction.rs  well_known.rs
gnap_client/: Cargo.toml
gnap_client/src/: lib.rs  main.rs
k8s/resources/: mongodb-service.yaml
k8s/scripts/: generate.sh
model/: Cargo.toml
model/src/: account.rs  client.rs  gnap.rs  grant.rs  lib.rs  oauth.rs  oidc.rs  resource.rs  transaction.rs
mongodb-init/: init.js
serde_utils/: Cargo.toml
serde_utils/src/: lib.rs  string_or_struct.rs  vec_or_one.rs
tx_endpoint/: Cargo.toml
tx_endpoint/src/: main.rs
tx_endpoint/src/handlers/: db.rs  transaction.rs
tx_endpoint/src/routes/: mod.rs  transaction.rs  with_service.rs
