[package]
name = "dao"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0"
futures = "0.3.17"
log = "0.4.14"
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"]}
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.1"
errors = {path = "../errors"}
model = {path = "../model"}

