[package]
name = "errors"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0"
redis = "0.21"
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.29"
warp = "0.3.1"

