[package]
name = "gnap_as"
version = "0.1.0"
edition = "2018"
authors = ["David Skyberg <davidskyberg@gmail.com>"]
repository = "https://github.com/dskyberg/gnap"
description = "A very simply GNAP Authorization Server written in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.3"
actix-utils = "2"
actix-web = {version = "4.0.0-beta.10", features = ["openssl"]}
openssl = { version = "0.10" }
dotenv = "0.15.0"
mongodb = "2.0.0"
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"]}
pretty_env_logger = "0.4.0"
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.29"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures = "0.3.17"
log4rs = "1.0.0"
log = "0.4"
jsonwebtoken = "7.2.0"
errors = {path = "../errors"}
model = {path = "../model"}
dao = {path = "../dao"}
get_if_addrs = "0.5.3"
